[package]
name = "pi-timelapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde", "rustc-serialize"] }
fern = "0.6.1"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
openssl = {version = "0.10.43", features = ["vendored"] }
ssh2 = { git = "https://github.com/alexcrichton/ssh2-rs.git", rev = "f10329d2cd372f88149ebb2b63454cba9c0b8ad4" }
